--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,5 @@
     <string name="choice2">教职工</string>
     <string name="signin">登录</string>
     <string name="signup">注册</string>
+    <string name="desc">中大校徽</string>
 </resources>
